[package]
authors = ["Hirotoshi Sakane <sakanehirotoshi@gmail.com>"]
edition = "2018"
name = "pooros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
x86_64 = "0.14.7"

[package.metadata.bootimage]
build-command = ["build"]

run-command = [
  "qemu-system-x86_64",
  "-drive",
  "format=raw,file={}",
]
